<resources>
    <string name="app_name" translatable="false">Queenbee</string>
    <!-- All -->
    <string name="start">start</string>
    <string name="next">next</string>
    <string name="done">done</string>

    <!-- Http Error -->
    <string name="no_network">No internet</string>
    <string name="unknown_host">Please check your Internet</string>
    <string name="bad_request">Bad Request</string>
    <string name="unauthorized">Not authenticated</string>
    <string name="forbidden">access is forbidden</string>
    <string name="user_not_found">User not found</string>
    <string name="conflict">Duplicate %s</string>
    <string name="unknown_error">unknown error</string>

    <!-- OnBoard -->
    <string-array name="onboard">
        <item>숨기지 마세요.\n탐구하세요.</item>
        <item>안전한 만남\n안전한 사랑</item>
        <item>다양한 취향\n이기적인 평가</item>
    </string-array>


    <!--    Register-->
    <string name="personnel_title">안녕하세요,\n전화번호를 입력해주세요.</string>
    <string name="personnel_body">전화번호는 중복가입을 방지하는 용도로 사용됩니다. 그리고 내 연락처에 저장된 사람이 나를 퀸비에서 볼 수 없게 해줍니다. 수집된 번호는 개인을 식별하는 용도로 이용되거나 공유되지 않습니다.</string>
    <string name="verification_title">%1$s에 수신된\n인증번호를 입력해주세요.</string>
    <string name="resend">재전송하기</string>
    <string name="terms_title">계정이 생성되었습니다.\n약관을 읽어보고 시작해주세요.</string>
    <string name="wrong_verification_code">인증번호가 맞지않습니다.</string>
    <string name="terms_checkBox">모두 동의</string>
    <string name="terms_unchecked">약관에 동의해주세요.</string>

    <string name="profile_start">처음 오신 분이시군요.\n퀸비를 시작하기 위해 간단한\n프로필을 작성해주세요.</string>
    <string name="gender_title">성별은 무엇입니까?</string>
    <string name="gender_male">냄져</string>
    <string name="gender_female">여자</string>
    <string name="self_check_title">퀸비는 안전한 만남을 지향합니다.\n해당하는 항목을 선택해주세요.</string>
    <string name="self_check_subtitle">\"나는 의사 또는 적법한 검사기관을 통한\n결과를 바탕으로 아래의 질문에 대답합니다.\"</string>
    <string name="self_check_yes">예</string>
    <string name="self_check_no">아니오</string>
    <string name="self_check_std_body">보건소 또는 병원에서 성병검사를 받았으며 타인에게 옮길 수 있는 성병에 대해 음성판정 또는 치료를 받았습니다.</string>
    <string name="self_check_hpv_body">가다실 등 HPV(인유두종바이러스)백신 접종을 완료하였습니다.</string>
    <string name="self_check_male_subscription">남성 회원의 경우 해당 항목을 만족하지 못할 시 서비스 이용이 제한 될 수 있습니다.</string>
    <string name="self_check_covid_body">COVID-19 접종을 완료하였습니다.</string>

    <string name="self_check_report_title">검사 완료를 선택하셨습니다.\n검사결과지를 업로드 해주세요.</string>
    <string name="self_check_report_subtitle">진단서 등 민감정보의 도용은 불법입니다.\n반드시 자신의 정보만 업로드해주세요.</string>
    <string name="self_check_report_upload">업로드하기</string>
    <string name="self_check_report_album">앨범에서 선택</string>

    <string name="not_tested_title">죄송합니다. 퀸비는 최소한의\n검사를 완료한 회원간의\n안전한 만남을 지향합니다.</string>
    <string name="not_tested_subtitle">의사 또는 적법한 검사기관을 통해\n성병 검사를 진행하신 후\n결과지를 업로드 해주세요.</string>
    <string name="not_tested_body1">검사는 어디서 받을 수 있나요?</string>
    <string name="not_tested_body2">어떤 검사를 진행하나요?</string>
    <string name="not_tested_body3">검사 절차는 복잡한가요?</string>
    <string name="not_tested_body4">성병 검사는 왜 받아야 하나요?</string>
    <string name="not_tested_body5">양성이 나오면 어쩌죠?</string>

    <string name="profile_age_title">나이는 어떻게 되시나요?</string>료
    <string name="profile_nickname">퀸비에서 사용하실 닉네임을\n정해주세요.</string>
    <string name="profile_self_intro_title">간단한 소개 또는 상대가 미리\n알았으면 하는 정보를 적어주세요.</string>
    <string name="profile_self_intro_placeholder">예시가 들어가면 좋음</string>
    <string name="profile_main_location_title">어느 동네에서 이성을\n소개시켜 드릴까요?</string>
    <string name="profile_main_location_body">본인의 위치와 상관없어도 됩니다.\n자주가는 동네, 편하게 나갈 수 있는 동네,\n그냥 궁금한 동네도 괜찮습니다.\n 입력하신동네와 가까운 곳에서\n이성을 소개시켜 드립니다.</string>
    <string name="profile_any_location_title">또 편한 동네가 있으면\n자유롭게 적어주세요!</string>
    <string name="profile_any_location_body">또 다른 편한 동네가 있다면 적어주세요.\n매칭과는 상관없는 단순히 편한 동네를\n공유하기 위한 정보입니다.</string>
    <string name="profile_any_location_placeholder">가로수길, 수내역 주변, 분당 아무 술집</string>
    <string name="profile_done">프로필 작성 완료</string>

    <!-- Time -->
    <string name="time_sec_ago">sec ago</string>
    <string name="time_min_ago">min ago</string>
    <string name="time_hour_ago">hours ago</string>
    <string name="time_day_ago">days ago</string>

    <!--    Profile-->
    <string name="user_profile_title">프로필</string>
    <string name="user_profile_age">나이</string>
    <string name="user_profile_distance">거리</string>
    <string name="user_profile_place">선호지역</string>
    <string name="user_profile_self_intro">자기소개</string>
    <string name="user_profile_std">STD 검사</string>

    <string name="user_profile_compatibility_decription">%1$s님과의 과감한 궁합이 \n %2$d%% 매치합니다.</string>
    <string name="user_profile_no_my_compatibility">아직 과감한 프로필을 작성하지 않으셨습니다.\n %1$s님과의 과감한 궁합을 알아보려면\n과감한 프로필을 완성해주세요!</string>
    <string name="user_profile_no_opponent_compatibility">%1$s님이 과감한 프로필을 작성\n하지 않아 궁합을 알 수 없습니다.</string>

    <string name="user_profile_swipe_to_bold_profile">스와이프하여 과감한 프로필 보기</string>
    <string name="user_profile_start_chat">채팅 시작하기</string>
    
    <!--    Bold Profile-->
    <string name="edit_bold_profile_warning">과감한 프로필은 회원 간에 궁합도를 위해 이용됩니다.\n작성을 하지 않으시면 다른 회원의 과감한 프로필 및 궁합을 볼 수 없습니다.</string>
    <string name="edit_bold_profile_check">작성하고 다른사람들의\n 가가맘을 보길 원해요</string>

    <!--    RoyalJelly Shop-->
    <string name="receive_free_royal_jelly">받기</string>
    <string name="received_free_royal_jelly">수령완료</string>

    <!--    Chat More-->
    <string name="chat_more_dialog_turn_off_alarm">알림끄기</string>
    <string name="chat_more_dialog_block">차단하기</string>
    <string name="chat_more_dialog_report">신고하기</string>
    <string name="chat_more_dialog_leave_room">채팅방 나가기</string>

    <!--    Moment-->
    <string name="moment_write_new_title">오늘 시간 되시나요?</string>
    <string name="moment_write_new_subtitle">여기에 공유해보세요. 주변에 관심있는 분들이 연락 주실거에요. 약속을 잡고</string>
    
</resources>