<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_chat_more_dialog_turn_off_alarm"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="?attr/selectableItemBackground">

        <TextView
            android:id="@+id/textView_chat_more_dialog_turn_off_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_more_dialog_turn_off_alarm"
            android:textColor="#838383" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_chat_more_dialog_block"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="?attr/selectableItemBackground">

        <TextView
            android:id="@+id/textView_chat_more_dialog_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_more_dialog_block"
            android:textColor="#838383" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_chat_more_dialog_report"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="?attr/selectableItemBackground">

        <TextView
            android:id="@+id/textView_chat_more_dialog_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_more_dialog_report"
            android:textColor="#838383" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_chat_more_dialog_leave_room"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="?attr/selectableItemBackground">

        <TextView
            android:id="@+id/textView_chat_more_dialog_leave_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_more_dialog_leave_room"
            android:textColor="#838383" />
    </LinearLayout>

</LinearLayout>