<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_any_location_title"
        style="@style/Widget.Queenbee.TextView.LoginTitle"
        android:layout_marginTop="50dp"
        android:text="@string/profile_any_location_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_any_location_body"
        style="@style/Widget.Queenbee.TextView.LoginBody"
        android:layout_marginTop="15dp"
        android:text="@string/profile_any_location_body"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_any_location_title"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/editText_any_location"
        style="@style/Widget.Queenbee.EditText"
        android:hint="@string/profile_self_intro_placeholder"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_any_location_body"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_profile_any_location"
        style="@style/Widget.Queenbee.Button.Login"
        android:layout_width="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>