<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_profile_gender_title"
        style="@style/Widget.Queenbee.TextView.LoginTitle"
        android:layout_marginTop="100dp"
        android:text="@string/gender_title"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_profile_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <LinearLayout
        android:id="@+id/layout_profile_gender_male"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/guideline_profile_gender"
        app:layout_constraintTop_toBottomOf="@+id/textView_profile_gender_title"
        android:layout_margin="30dp"
        android:background="@drawable/round_corner_10"
        >
        <TextView
            android:id="@+id/textView_profile_gender_male"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_male"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_profile_gender_female"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/guideline_profile_gender"
        app:layout_constraintTop_toBottomOf="@+id/textView_profile_gender_title"
        android:layout_margin="30dp"
        android:background="@drawable/round_corner_10"
        >
        <TextView
            android:id="@+id/textView_profile_gender_female"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_female"
            />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_profile_gender"
        style="@style/Widget.Queenbee.Button.Login"
        android:enabled="false"
        android:layout_width="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>