<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_profile_not_tested_title"
        style="@style/Widget.Queenbee.TextView.LoginTitle"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/not_tested_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_profile_self_check_body"
        style="@style/Widget.Queenbee.TextView.LoginBody"
        android:padding="15dp"
        android:text="@string/not_tested_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_profile_not_tested_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_not_tested_body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_profile_self_check_body"
        >
        <TextView
            android:id="@+id/textView_not_tested_body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            style="@style/TextAppearance.Queenbee.Body1"
            android:text="@string/not_tested_body1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <ImageView
            android:id="@+id/imageView_not_tested_next1"
            android:layout_width="16dp"
            android:layout_height="26dp"
            android:src="@drawable/ic_next_press"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view_not_tested_line1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/layout_not_tested_body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_not_tested_body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/view_not_tested_line1"
        >
        <TextView
            android:id="@+id/textView_not_tested_body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            style="@style/TextAppearance.Queenbee.Body1"
            android:text="@string/not_tested_body2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <ImageView
            android:id="@+id/imageView_not_tested_next2"
            android:layout_width="16dp"
            android:layout_height="26dp"
            android:src="@drawable/ic_next_press"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view_not_tested_line2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/layout_not_tested_body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_not_tested_body3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/view_not_tested_line2"
        >
        <TextView
            android:id="@+id/textView_not_tested_body3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            style="@style/TextAppearance.Queenbee.Body1"
            android:text="@string/not_tested_body3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <ImageView
            android:id="@+id/imageView_not_tested_next3"
            android:layout_width="16dp"
            android:layout_height="26dp"
            android:src="@drawable/ic_next_press"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view_not_tested_line3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/layout_not_tested_body3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_not_tested_body4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/view_not_tested_line3"
        >
        <TextView
            android:id="@+id/textView_not_tested_body4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            style="@style/TextAppearance.Queenbee.Body1"
            android:text="@string/not_tested_body4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <ImageView
            android:id="@+id/imageView_not_tested_next4"
            android:layout_width="16dp"
            android:layout_height="26dp"
            android:src="@drawable/ic_next_press"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view_not_tested_line4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/layout_not_tested_body4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_not_tested_body5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/view_not_tested_line4"
        >
        <TextView
            android:id="@+id/textView_not_tested_body5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            style="@style/TextAppearance.Queenbee.Body1"
            android:text="@string/not_tested_body5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <ImageView
            android:id="@+id/imageView_not_tested_next5"
            android:layout_width="16dp"
            android:layout_height="26dp"
            android:src="@drawable/ic_next_press"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view_not_tested_line5"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/layout_not_tested_body5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>