<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/textView_verificationCode_title"
        style="@style/Widget.Queenbee.TextView.LoginTitle"
        android:layout_marginTop="40dp"
        android:text="@string/verification_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_verificationCode_body"
        style="@style/Widget.Queenbee.TextView.LoginBody"
        android:textColor="@color/color_transparent"
        android:layout_marginTop="8dp"
        android:text="@string/personnel_body"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_verificationCode_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        />

    <EditText
        android:id="@+id/editText_verificationCode"
        style="@style/Widget.Queenbee.EditText"
        android:background="@drawable/round_corner_20"
        android:padding="15dp"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:maxLength="6"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/textView_verificationCode_body"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

<!--    <com.tresfellas.queenbee.ui.register.VerifyCodeView-->
<!--        android:id="@+id/editText_verificationCode"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="100dp"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView_verificationCode_title" />-->

    <TextView
        android:id="@+id/button_verificationCode_resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/resend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_verificationCode" />

    <include
        android:id="@+id/progressBar_verificationCode"
        layout="@layout/layout_progress_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_verificationCode_submit"
        style="@style/Widget.Queenbee.Button.Login"
        android:enabled="false"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>