<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout_edit_secret_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppBarLayout_Theme"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_edit_secret_profile_appbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/edit_secret_profile_back"
                android:layout_width="26dp"
                android:layout_height="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_back_press"
                />

            <TextView
                android:id="@+id/textView_title_edit_secret_profile"
                style="@style/Widget.Queenbee.TextView.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="과감한 프로필"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/textView_edit_secret_profile_start_title"
        style="@style/Widget.Queenbee.TextView.LoginTitle"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:text="@string/edit_bold_profile_warning"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout_edit_secret_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkBox_edit_secret_profile_start"
        style="@style/Widget.Queenbee.TextView.Head6"
        android:layout_gravity="center"
        android:button="@drawable/custom_checkbox"
        android:text="@string/edit_bold_profile_check"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_edit_secret_profile_start"
        android:enabled="false"
        style="@style/Widget.Queenbee.Button.Login"
        android:text="@string/start"
        android:layout_width="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <include
        android:id="@+id/progressBar_edit_secret_profile"
        layout="@layout/layout_progress_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>